--- a/src/client/us-election-2016/iframe.scss
+++ b/src/client/us-election-2016/iframe.scss
@@ -5,6 +5,11 @@ $o-grid-layouts: (
 	XL: 1220px,
 );
 
+@import 'o-fonts/main';
+@include oFontsInclude(FinancierDisplayWeb);
+@include oFontsInclude(FinancierDisplayWeb, $weight: bold);
+@include oFontsInclude(MetricWeb);
+@import 'next-sass-setup/main';
 @import 'card';
 @import 'summary';
 
